# fem

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  test.py
.github/actions/setup/: action.yml
.github/workflows/: ci-cd.yml  code-quality.yml  publish.yml
circlyboi/: FEM_circle.py  FEM_linear.py  __init__.py  fem.py  main.py  mesh_utils.py  parse_func.py  plotting.py  problems.py  rust.pyi  rust_test.py  solver.py
docs/: README-pypi.md
licenses/: NOTICES.md
src/: lib.rs
