[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fem"
version = "0.1.0"
description = "wave equation using FEM"
authors = [
    {name = "Matthew Bradley",email = "matthewbradley2002@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "meshpy (>=2022.1.3,<2023.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numexpr (>=2.10.2,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.8.3",
]

[project.scripts]
fem = "circlyboi.main:app"

[tool.hatch.build.targets.wheel]
packages = ["circlyboi"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
version_files = [
    "circlyboi/__init__.py",
    "pyproject.toml",
]
major_version_zero = true
update_changelog_on_bump = true

[tool.uv.sources]
circlyboi = { workspace = true }

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
]
