[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "fem-sim"
version = "0.2.0"
description = "wave equation using FEM"
authors = [
    {name = "Matthew Bradley",email = "matthewbradley2002@gmail.com"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numexpr (>=2.10.2,<3.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "meshpy>=2025.1.1",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.8.3",
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]

[project.scripts]
fem = "circlyboi.main:app"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
version_files = [
    "src/circlyboi/__init__.py",
    "pyproject.toml",
    "Cargo.toml",
]
major_version_zero = true
update_changelog_on_bump = true

[tool.uv.sources]
circlyboi = { workspace = true }

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "circlyboi.rust"
